--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "auth": "graph auth https://api.thegraph.com/deploy/",
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy:mainnet": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ --access-token 6c8c30520ef64c8888f664c9b6e5e9dd daisai3/etha",
-    "create-local": "graph create --node http://localhost:8020/ graphprotocol/erc20-subgraph",
-    "remove-local": "graph remove --node http://localhost:8020/ graphprotocol/erc20-subgraph",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 graphprotocol/erc20-subgraph"
+    "deploy:mainnet": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ --access-token 6c8c30520ef64c8888f664c9b6e5e9dd daisai3/etha"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "0.18.0",
